--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+
+
 body {
-    background-color: tomato;
+    background-color: F3F2F0;
+    font-family: 'Lora', serif;
 }
