--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,121 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Manrope:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&family=Manrope:wght@200;400;700&display=swap');
 
+
+.line-1 {
+    height: 1px;
+    background: black;
+    /* margin-top: 50px; */
+    width: 100vw;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+  }
 
 body {
-    background-color: F3F2F0;
+    background-color: #F3F2F0;
+    padding: 50px 300px;
+    max-width: 90ch;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    border-right: solid 1px black;
+    border-left: solid 1px black;
+     
+}
+
+/* .container-top {
+    border: solid 1px red;
+    margin: 50px 0px;
+    display: inline-block;
+    
+} */
+
+/* .container {
+    margin: 0 0px;
+    
+} */
+
+
+.heading {
     font-family: 'Lora', serif;
+    padding: 100px 0px 0px 0px;
+    font-weight: 200;
+    margin-bottom: 10px !important;
+    font-size: 40px;
+    font-weight: normal;
+    text-align: center;
+    margin-top: 0px;
+    padding-top: 100px;
+    /* border-top: solid 1px black; */
+}
+
+/* h1 {
+    font-size: 40px;
+    font-weight: normal;
+    text-align: center;
+    margin-top: 0px;
+    padding-top: 200px;
+} */
+
+.text {
+    font-size: 16px;
+    font-family: 'Manrope', sans-serif;
+    padding: 30px 0px;
+    letter-spacing: .75px;
+    font-weight: 200;
+    line-height: 1.5;
+
+
+}
+
+.divider {
+    background-color: darkblue;
+    
+}
+
+.subheading { 
+    font-size: 16px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: bold;
+    max-width: 65ch;
+    line-height: 1.5;
+    padding: 0px 25px 65px 180px;
+
+}
+
+.author{
+    list-style-image: url(../Images/Bullet.svg);
+   
+}
+
+ 
+.unorderedlist {
+    float: left;
+    text-align: center;
+
+}
+
+
+.quote {
+    font-family: 'Lora', serif;
+    text-align: center;
+    max-width: 65ch;
+    line-height: 2;
+    padding: 30px 25px;
+   
+    
+}
+
+.accent {
+    color: #C1002B;
+    font-style: italic;
+}
+
+.button1 {
+    margin: 0 auto;
+    size: 100px;
+    padding: 100px 0px;
 }
