--- a/styles/index.css
+++ b/styles/index.css
@@ -88,6 +88,7 @@ body {
 
 .author{
     list-style-image: url(../Images/Bullet.svg);
+    color: black;
    
 }
 
@@ -118,4 +119,18 @@ body {
     margin: 0 auto;
     size: 100px;
     padding: 100px 0px;
+}
+
+.byname {
+    font-size: 16px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: bold;
+    max-width: 65ch;
+    line-height: 1.5;
+    padding-left: 300px;
+}
+
+.figma {
+    width: 800px;
+    border: solid 1px black;
 }
